[gd_scene load_steps=4 format=3 uid="uid://c72axgqxmvbcl"]

[ext_resource type="Script" path="res://inventory/scripts/InventorySlot.gd" id="1_pugra"]

[sub_resource type="LabelSettings" id="LabelSettings_fd5qr"]
font_size = 9

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdrp1"]
size = Vector2(18, 18)

[node name="InventorySlot" type="Button"]
custom_minimum_size = Vector2(20, 20)
offset_left = 256.5
offset_top = 131.5
offset_right = 276.5
offset_bottom = 151.5
script = ExtResource("1_pugra")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -16.0
grow_horizontal = 0
grow_vertical = 0
label_settings = SubResource("LabelSettings_fd5qr")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(10.5, 9.5)
shape = SubResource("RectangleShape2D_rdrp1")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
